feat: add responsive navbar with i18n support and custom styles

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,5 +1,11 @@
 {
-  "hero_title": "Welcome to DemyAAA",
+  "hero_title": "Welcome to Demy",
   "hero_subtitle": "The smart way to manage your academy",
-  "cta_button": "Get started"
+  "cta_button": "Get started",
+  "nav_about": "About",
+  "nav_benefits": "Benefits",
+  "nav_plans": "Plans",
+  "nav_contact": "Contact",
+  "nav_login": "Log in",
+  "nav_signup": "Sign up"
 }
