--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -12,5 +12,18 @@
     "contact": "Contact",
     "login": "Log in",
     "signup": "Sign up"
+  },
+  "contact": {
+    "subtitle": "Contact",
+    "title": "Contact us",
+    "name": "Name",
+    "namePlaceholder": "i.e. John Doe",
+    "email": "Email",
+    "emailPlaceholder": "i.e. john@gmail.com",
+    "phone": "Phone",
+    "phonePlaceholder": "964 158 230",
+    "message": "Message",
+    "messagePlaceholder": "Leave us a message",
+    "submit": "Start today"
   }
 }
